# NeuroStim

./: CMakeLists.txt  Info.plist  README.md  appengine.cpp  appengine.h  basetask.cpp  basetask.h  historylistmodel.cpp  historylistmodel.h  item.cpp  item.h  lsl.cpp  lsl.h  mailagent.cpp  mailagent.h  main.cpp  player.cpp  player.h  properties.cpp  properties.h  resources.qrc  sample.cpp  sample.h  screenlistmodel.cpp  screenlistmodel.h  taskmanager.cpp  taskmanager.h
android/: AndroidManifest.xml  KeyStore.txt
android/Certificate/: android_release.keystore
items/: buttonitem.cpp  buttonitem.h  mfiitem.cpp  mfiitem.h  nasaitem.cpp  nasaitem.h  polygonitem.cpp  polygonitem.h  spiralitem.cpp  spiralitem.h  textitem.cpp  textitem.h
qml/: HistoryPage.qml  MenuButton.qml  ProfilePage.qml  PropertyDelegate.qml  SendDialog.qml  SettingsPage.qml  TaskDialog.qml  TasksPage.qml  main.qml
tasks/: backgroundactivitytask.cpp  backgroundactivitytask.h  pointfindertask.cpp  pointfindertask.h  test1task.cpp  test1task.h
